2007-12-20  Larry Jones  <lawrence.jones@siemens.com>

	* commit.c, entries.c, find_names.c, history.c, ignore.c, import.c,
	lock.c, login.c, subr.c, subr.h, tag.c, update.c: Fix gcc -Wall
	warnings.

2007-12-16  Larry Jones  <lawrence.jones@siemens.com>

	* rcs.c (HAVE_MMAP): Fall back to stdio if mmap fails.

2007-12-13  Larry Jones  <lawrence.jones@siemens.com>

	* rcs.c (rcsbuf_ftell): Avoid potential overflow.

2007-12-12  Larry Jones  <lawrence.jones@siemens.com>

	* vers_ts.c (unix_time_stamp): Add warnings for [l]stat failures
	other than no such file.

2007-12-12  Derek Price  <derek@ximbiot.com>

	* recurse.c: Include GNULIB's "quote.h".

2007-12-11  Derek Price  <derek@ximbiot.com>

	* recurse.c (start_recursion): Improve error message.
	* sanity.sh (basicc): Update to compensate.

2007-10-28  Derek Price  <derek@ximbiot.com>

	* hash.c, tag.c: Use TRACE_NULL as needed.  Some cleanup.

	* server.h (TRACE_PTR): Abstract cross-platform printing of pointers.
	* hash.c, recurse.c, tag.c: Use new macro.

2007-09-12  Derek Price  <derek@ximbiot.com>

	* server.h (TRACE_MINUTIA): Add new trace level.
	* server.c (cvs_trace_i, cvs_trace_ia): New internal functions.
	(cvs_trace): Trace the PWD when tracing minutia.

	* sanity.sh (edit-check): Update to compensate for quoting introduce
	by last commit.

	* commit.c: Misc cleanup.  Use GNULIB's quote(), if not consistently.
	* edit.c: Alphabetize includes.
	* recurse.c (start_recursion): Use new enum lock_type and make
	UPDATE_PRELOAD const.  Use TRACE_NULL in traces.
	* recurse.h (enum lock_type): New type replacing...
	(CVS_LOCK_NONE, CVS_LOCK_READ, CVS_LOCK_WRITE): ...these macros.
	(W_LOCAL, W_ATTIC, W_REPOS): Clean up.
	(start_recursion): Update prototype per recurse.c.

	* subr.h (STRNEQ): New macro.
	* add.c, admin.c, checkout.c, client.c, commit.c, create_adm.c,
	cvsrc.c, edit.c, entries.c, fileattr.c, find_names.c, history.c,
	ignore.c, lock.c, logmsg.c, parseinfo.c, patch.c, rcs.c, repos.c,