@@ -41,7 +41,7 @@ typedef enum direnter_type Dtype;
 #endif
 
 /* Recursion processor lock types */
-enum lock_type
+enum cvs_lock_type
 {
     CVS_LOCK_NONE,
     CVS_LOCK_READ,
@@ -62,7 +62,7 @@ typedef	int (*DIRLEAVEPROC) (void *callerdat, const char *dir, int err,
 int start_recursion (FILEPROC fileproc, FILESDONEPROC filesdoneproc,
 		     DIRENTPROC direntproc, DIRLEAVEPROC dirleaveproc,
 		     void *callerdat, int argc, char *argv[], int local,
-		     int which, int aflag, enum lock_type locktype,
+		     int which, int aflag, enum cvs_lock_type locktype,
 		     const char *update_preload, int dosrcs, char *repository);
 
 #endif /* RECURSE_H */
